# fast-plate-ocr

./: .editorconfig  .gitignore  .yamllint.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  augmentation.py  custom.py  demo_recog.py  extra_augmentation.py  layer_blocks.py  mkdocs.yml  models.py  onnx_converter.py  pyproject.toml  requirements.txt  train.py  valid.py  versions.json  visualize_augmentation.py  visualize_predictions.py
.github/workflows/: ci.yaml  close-inactive-issues.yaml  codeql-analysis.yaml  main.yaml  release.yaml  secret-scanning.yaml  test.yaml  workflow-lint.yaml
0.1/: 404.html  index.html  objects.inv
0.1/architecture/: index.html
0.1/installation/: index.html
0.1/reference/: index.html
0.1/search/: search_index.json
0.1/usage/: index.html
0.2/: index.html
0.2/installation/: index.html
0.2/reference/: index.html
0.2/search/: search_index.json
0.3/: index.html
0.3/architecture/: index.html
0.3/contributing/: index.html
0.3/reference/: index.html
0.3/search/: search_index.json
0.3/usage/: index.html
1.0/: 404.html  index.html  objects.inv
1.0/contributing/development/: index.html
1.0/inference/model_zoo/: index.html
1.0/inference/running_inference/: index.html
1.0/installation/: index.html
1.0/reference/core/process/: index.html
1.0/reference/core/types/: index.html
1.0/reference/core/utils/: index.html
1.0/reference/inference/hub/: index.html
1.0/reference/inference/inference_class/: index.html
1.0/reference/train/model/: index.html
1.0/reference/train/plate_config/: index.html
1.0/search/: search_index.json
1.0/training/backend/: index.html
1.0/training/cli/dataset_stats/: index.html
1.0/training/cli/export/: index.html
1.0/training/cli/train/: index.html
1.0/training/cli/valid/: index.html
1.0/training/cli/validate_dataset/: index.html
1.0/training/cli/visualize_augmentation/: index.html
1.0/training/cli/visualize_predictions/: index.html
1.0/training/config/model_config/: index.html
1.0/training/config/plate_config/: index.html
1.0/training/dataset/: index.html
1.0/training/intro/: index.html
1.0/training/metrics/: index.html
assets/benchmark/: annotations.csv
benchmark/: anotaciones.csv  anotaciones.txt
config/: arg_cnn_ocr_config.yaml  arg_plate_example.yaml  argentinian_plate_config.yaml  default_latin_plate_config.yaml  latin_plate_example.yaml  new_latin_plate_config.yaml
docs/: architecture.md  contributing.md  index.md  installation.md  reference.md  usage.md
docs/contributing/: development.md
docs/inference/: model_zoo.md  running_inference.md
docs/reference/core/: process.md  types.md  utils.md
docs/reference/inference/: hub.md  inference_class.md
docs/reference/train/: model.md  model_builder.md  plate_config.md
docs/training/: backend.md  dataset.md  intro.md  metrics.md
docs/training/cli/: dataset_stats.md  export.md  train.md  valid.md  validate_dataset.md  visualize_augmentation.md  visualize_predictions.md
docs/training/config/: model_config.md  plate_config.md
examples/: tutorial_fine_tune_plate_model.ipynb
fast_lp_ocr/: augmentation.py  config.py  custom.py  dataset.py  layer_blocks.py  models.py  utils.py
fast_plate_ocr/: __init__.py  augmentation.py  backend_utils.py  config.py  custom.py  custom_types.py  dataset.py  models.py  utils.py
fast_plate_ocr/cli/: cli.py  dataset_stats.py  export.py  onnx_converter.py  train.py  utils.py  valid.py  validate_dataset.py  visualize_augmentation.py  visualize_predictions.py
fast_plate_ocr/common/: utils.py
fast_plate_ocr/core/: process.py  types.py  utils.py
fast_plate_ocr/data/: dataset.py
fast_plate_ocr/inference/: __init__.py  config.py  hub.py  onnx_inference.py  plate_recognizer.py  process.py  utils.py
fast_plate_ocr/model/: custom.py  layer_blocks.py  models.py
fast_plate_ocr/train/data/: augmentation.py  dataset.py
fast_plate_ocr/train/model/: cct_model.py  config.py  coord_conv.py  custom.py  layer_blocks.py  layers.py  loss.py  metric.py  model_builder.py  model_builders.py  model_schema.py  models.py
fast_plate_ocr/train/utilities/: backend_utils.py  utils.py
fast_plate_ocr/utilities/: utils.py
models/: cct_s_v1.yaml  cct_s_v2.yaml  cct_xs_v1.yaml
test/: __init__.py  conftest.py
test/assets/: __init__.py
test/fast_lp_ocr/: test_config.py  test_custom.py  test_models.py  test_utils.py
test/fast_lp_ocr/cli/: test_export.py  test_train.py
test/fast_lp_ocr/core/: test_process.py
test/fast_lp_ocr/inference/: test_hub.py  test_onnx_inference.py  test_process.py
test/fast_lp_ocr/train/: test_config.py  test_custom.py  test_layers.py  test_metric.py  test_model_schema.py  test_models.py  test_utils.py
test/src/: test_src.py
train_val_set/: train_anotaciones.csv  train_anotaciones.txt  valid_anotaciones.csv  valid_anotaciones.txt
val_set/: anotaciones.txt
