[tool.poetry]
name = "fast-plate-ocr"
version = "1.0.0"
description = "Fast & Lightweight OCR for vehicle license plates."
authors = ["ankandrew <61120139+ankandrew@users.noreply.github.com>"]
readme = "README.md"
repository = "https://github.com/ankandrew/fast-plate-ocr/"
documentation = "https://ankandrew.github.io/fast-plate-ocr"
keywords = ["plate-recognition", "license-plate-recognition", "license-plate-ocr"]
license = "MIT"
classifiers = [
    "Typing :: Typed",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = ">=3.10"
# Packages required for doing inference
numpy = ">=1.20"
opencv-python = "*"
pyyaml = ">=5.1"
tqdm = "*"
rich = "*"

# ONNX package variants (for different hardware accelerator)
onnxruntime = { version = "*", optional = true }
onnxruntime-gpu = { version = "*", optional = true }
onnxruntime-openvino = { version = "*", optional = true }
onnxruntime-directml = { version = "*", optional = true }
onnxruntime-qnn = { version = "*", optional = true }

# Training packages are optional
albumentations = { version = "*", optional = true }
click = { version = "*", optional = true }
coremltools = { version = "*", optional = true }
keras = "^3.10.0"
matplotlib = { version = "*", optional = true }
onnxslim = { version = ">=0.1.56", optional = true }
pandas = { version = "*", optional = true }
pydantic = { version = "^2.5.2", optional = true }
scikit-learn = { version = "*", optional = true }
tensorboard = { version = "*", optional = true }
tensorflow = { version = "*", optional = true }
tf2onnx = { version = "*", optional = true }

[tool.poetry.extras]
onnx = ["onnxruntime"]
onnx-gpu = ["onnxruntime-gpu"]
onnx-openvino = ["onnxruntime-openvino"]
onnx-directml = ["onnxruntime-directml"]
onnx-qnn = ["onnxruntime-qnn"]
train = [
    "albumentations",
    "click",
    "coremltools",
    "keras",
    "matplotlib",
    "onnxslim",
    "pandas",
    "pydantic",
    "scikit-learn",
    "tensorboard",
    "tensorflow",
    "tf2onnx",
]

[tool.poetry.group.test.dependencies]
pytest = "*"

[tool.poetry.group.dev.dependencies]
mypy = "*"
ruff = "*"
pandas-stubs = "*"
pylint = "*"
types-pyyaml = "*"
yamllint = "*"

[tool.poetry.group.docs.dependencies]
mkdocs-material = "*"
mkdocstrings = { version = "*", extras = ["python"] }
mike = "*"

[tool.poetry.scripts]
fast-plate-ocr = "fast_plate_ocr.cli.cli:main_cli"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    "W",
    # Pyflakes
    "F",
    # pep8-naming
    "N",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # flake8-unused-arguments
    "ARG",
    # Pylint
    "PL",
    # Perflint
    "PERF",
    # Ruff-specific rules
    "RUF",
    # pandas-vet
    "PD",
]
ignore = ["N812", "PLR2004", "PD011"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pylint]
max-args = 8

[tool.ruff.format]
line-ending = "lf"

[tool.mypy]
disable_error_code = "import-untyped"
[[tool.mypy.overrides]]
module = ["albumentations"]
ignore_missing_imports = true

[tool.pylint.typecheck]
generated-members = ["cv2.*"]
signature-mutators = [
    "click.decorators.option",
    "click.decorators.argument",
    "click.decorators.version_option",
    "click.decorators.help_option",
    "click.decorators.pass_context",
    "click.decorators.confirmation_option"
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint."messages control"]
disable = ["missing-class-docstring", "missing-function-docstring", "wrong-import-order", "duplicate-code"]

[tool.pylint.design]
max-args = 8
min-public-methods = 1

[tool.pylint.basic]
no-docstring-rgx = "^__|^test_"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
